syntax = "proto3";
package proto;
option go_package = "./pb";

message CommitTransaction {
  int64 expectedFinalIndex = 1;
  int64 index = 2;
  string operation = 3;
  int64 term = 4;
}

message CommitOperationResponse { int64 logfileFinalIndex = 1; }

message ApplyOperationRequest {}

message ApplyOperationResponse {}

message ForwardOperationRequest { string operation = 1; }

message ForwardOperationResponse {}

service ReplicateOperationService {
  rpc CommitOperation(CommitTransaction) returns (CommitOperationResponse) {}
  rpc ApplyOperation(ApplyOperationRequest) returns (ApplyOperationResponse) {}
  rpc ForwardOperation(ForwardOperationRequest)
      returns (ForwardOperationResponse) {}
}